# DEmail

./: .eslintrc.json  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  rustfmt.toml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts  vitest.config.ts
src/: App.svelte  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  error.rs  main.rs  models.rs
src-tauri/src/core/: accounts.rs  attachments.rs  auth.rs  config.rs  contacts.rs  drafts.rs  export.rs  migrations.rs  mod.rs  reply_forward.rs  threading.rs  validation.rs  validation_tests.rs
src-tauri/src/core/cache/: db.rs  schema.rs
src-tauri/src/core/sync/: background_sync.rs  imap_sync.rs  mod.rs  smtp_send.rs
src/lib/: utils.ts
src/lib/components/: AccountSwitcher.svelte  BulkActionToolbar.svelte  ComposeEmail.svelte  ContactAutocomplete.svelte  DraftEditor.svelte  DraftsList.svelte  DraftsManager.svelte  FolderList.svelte  KeyboardShortcutsHelp.svelte  MessageList.svelte  MessagePagination.svelte  MessageView.svelte  SearchBar.svelte  SignatureManager.svelte  ThemeToggle.svelte  ThreadView.svelte
src/lib/components/ui/button/: index.svelte
src/lib/components/ui/input/: index.svelte
src/lib/components/ui/label/: index.svelte
src/lib/components/ui/resizable/: index.ts  resizable-handle.svelte  resizable-pane.svelte
src/lib/components/ui/select/: index.svelte  index.ts  select-content.svelte  select-item.svelte  select-trigger.svelte  select-value.svelte
src/lib/components/ui/separator/: index.svelte
src/lib/services/: api.ts
src/lib/stores/: mailboxStore.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte  Settings.svelte
src/routes/callback/: +page.svelte
src/routes/inbox/: +page.svelte
src/routes/settings/: +page.svelte
tests/backend/: database_tests.rs
tests/frontend/: api.test.ts  setup.ts  some_test.ts
