[package]
name = "demail"
version = "1.0.0"
description = "A sovereign desktop email client."
authors = ["orpheus497"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "shell-open", "notification-all", "window-all", "dialog-all", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Core App
imap = "2.4.1"
lettre = { version = "0.11.10", features = ["smtp-transport", "builder", "tokio1-rustls-tls", "tokio1"] }
oauth2 = "4.4.0"
reqwest = { version = "0.11", features = ["json"] }
native-tls = "0.2.11"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
mail-parser = "0.9.4"
keyring = "2.0.2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.17"
thiserror = "1.0.40"
ammonia = "4.1.2"
headless_chrome = { version = "1.0.5", features = ["fetch"] }
mime_guess = "2.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Database pooling
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"

# Structured logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Validation and security
validator = { version = "0.18.1", features = ["derive"] }
sanitize-filename = "0.5.0"

# Utilities
once_cell = "1.20.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
